--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
   body{
       background-color: white;
       text-align: center;
+      width: 960px;
+      margin :auto;
   }
   header{
       margin-bottom: 15px;
@@ -13,30 +15,33 @@
       width: 100%;
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
-      z-index: -1;
+      align-items: center;
   }
 ul{
     list-style-type: none;
-    width: 50%;
+    height: 50%;
     float: right;
     margin: auto;
+    height: 50px;
+    right:0px;
+    display: block;
 }
 li{
     display:inline;
     padding: 0px;
     margin-left: 30px;
     margin-right: 30px;
+    line-height: 50px;
 }
 #logo {
     /* float: left; */
     margin-top: 20px;
-    margin-left: 300px;
+    margin-left: 30px;
     margin-bottom: 20px;
     margin-right: 0px;
     width: 200px;
     height: 70 px;
-    z-index: +1;
+    /* z-index: +1; */
 }
 main {
     width: 100%;
@@ -45,9 +50,9 @@ main {
 section {
     margin: auto;
     margin-top: 30px;
-    margin-bottom: 30px;
     width: 100%;
     text-align: center;
+    overflow: auto;
 }
 #hero-img{
     background-position: center;
@@ -60,7 +65,7 @@ section {
     margin-left: auto;
     margin-right: auto;
      /* width: 450px;
-     height: 960px; */ */
+     height: 960px; */ 
 
 }
 
@@ -68,8 +73,8 @@ section {
     display: inline-block;
     height: 375px;
     width:300px;
-    margin-left : 15px;
-    margin-right: 15px;
+    margin-left : 5px;
+    margin-right: 5px;
 }
 /* .section2boxes{
     display: inline;
@@ -80,21 +85,17 @@ section {
 /* #box2img2{
     margin-right: 30px;
     margin-left: 30px; */
-}
 /* #section2-box2{
     
     margin-left: 30px;
     margin-right: 30px; */
 
-}
-section :nth-of-type(3){
-    display: flex;
-    justify-content: center;
-}
+
+
 .section3boxes {
     width: 480px;
     height: 400px;
-     margin-left: 360px;
+  float: left;
 
 }
 
@@ -109,14 +110,14 @@ section :nth-of-type(3){
 #text-feature {
     display: flex;
     flex-direction: column;
-    margin-left: 900px;
     width: 460px;
     height: 460px;
+    margin-left: 15px;
     
 }
 #text-feature h4 {
-    text-align: center;
-    margin-bottom: 10px;
+    text-align: left;
+    margin-bottom: 0px;
     font-size: 20px;
    
     
@@ -145,11 +146,10 @@ button {
     transition: 350ms;
 }
 textarea {
-    margin-top: 40px;
-    height: 200px;
+    margin-top: 5px;
+    height: 315px;
 }
 footer {
     background-color: darkgray;
-    margin-bottom: 20px;
-    height: 200px;
+    height: 100px;
 }
